--- a/bike-collisions-mom-w31.html
+++ b/bike-collisions-mom-w31.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Gráfico de barras</title>
+  <title>Grafico de barras</title>
 </head>
 <body>
   
